--- a/GruntLauncher/GruntLauncher.csproj
+++ b/GruntLauncher/GruntLauncher.csproj
@@ -128,6 +128,7 @@
   <ItemGroup>
     <Compile Include="GruntParser.cs" />
     <Compile Include="Guids.cs" />
+    <Compile Include="Helpers\SolutionHelpers.cs" />
     <Compile Include="ProcessUtilities.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
