--- a/GruntLauncher/GruntLauncher.csproj
+++ b/GruntLauncher/GruntLauncher.csproj
@@ -135,6 +135,7 @@
   <ItemGroup>
     <Compile Include="GruntParser.cs" />
     <Compile Include="Guids.cs" />
+    <Compile Include="GulpParser.cs" />
     <Compile Include="Helpers\OutputHelpers.cs" />
     <Compile Include="Helpers\SolutionHelpers.cs" />
     <Compile Include="Helpers\ProcessHelpers.cs" />
@@ -188,6 +189,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Init.txt" />
+    <None Include="Resources\gulpInit.txt" />
     <Content Include="Resources\Package.ico" />
   </ItemGroup>
   <PropertyGroup>
