--- a/GruntLauncher/GruntLauncher.csproj
+++ b/GruntLauncher/GruntLauncher.csproj
@@ -67,6 +67,8 @@
     <Reference Include="Microsoft.VisualStudio.Shell.11.0" />
     <Reference Include="Microsoft.VisualStudio.Shell.Immutable.10.0" />
     <Reference Include="Microsoft.VisualStudio.Shell.Immutable.11.0" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
@@ -75,6 +77,7 @@
     <Reference Include="System.Management" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <COMReference Include="EnvDTE">
@@ -133,6 +136,9 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bower\BowerManagerDialog.xaml.cs">
+      <DependentUpon>BowerManagerDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="GruntParser.cs" />
     <Compile Include="Guids.cs" />
     <Compile Include="GulpParser.cs" />
@@ -199,6 +205,12 @@
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="Resources\Package.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Bower\BowerManagerDialog.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <PropertyGroup>
     <UseCodebase>true</UseCodebase>
