--- a/GruntLauncher/GruntLauncher.csproj
+++ b/GruntLauncher/GruntLauncher.csproj
@@ -76,6 +76,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
@@ -136,9 +137,10 @@
     </COMReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bower\BowerManagerDialog.xaml.cs">
+    <Compile Include="Utilities\Bower\BowerManagerDialog.xaml.cs">
       <DependentUpon>BowerManagerDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Utilities\Bower\Init.cs" />
     <Compile Include="GruntParser.cs" />
     <Compile Include="Guids.cs" />
     <Compile Include="GulpParser.cs" />
@@ -159,6 +161,8 @@
     <Compile Include="GruntLauncherPackage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PkgCmdID.cs" />
+    <Compile Include="Utilities\Gulp\Init.cs" />
+    <Compile Include="Utilities\Npm\Init.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources.resx">
@@ -207,10 +211,13 @@
     <Content Include="Resources\Package.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Bower\BowerManagerDialog.xaml">
+    <Page Include="Utilities\Bower\BowerManagerDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Utilities\Grunt\" />
   </ItemGroup>
   <PropertyGroup>
     <UseCodebase>true</UseCodebase>
